# bevy-game-of-life

./: .gitignore  Cargo.toml  README.md  bacon.toml
assets/: add_inputs.wgsl  game_of_life.wgsl
src/: main.rs  setup.rs
src/resources/: controls.rs  mod.rs
src/systems/: control_camera.rs  debug_systems.rs  draw_control.rs  mod.rs  setup.rs  size_camera.rs  update_image.rs
src/systems/game_of_life/: actions_holder.rs  bind_group.rs  bind_groups.rs  images_holder.rs  mod.rs  node.rs  pipeline.rs  startup.rs  types.rs
src/systems/game_of_life/bind_groups/: actions.rs  current_image.rs  images.rs  mod.rs
